k8s/website-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: flexable
spec:
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: 816119410753.dkr.ecr.us-east-2.amazonaws.com/flexable-website
          resources:
            limits:
              memory: "512Mi"
              cpu: "100m"
          ports:
            - containerPort: 3000
