k8s/website-service.yml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: flexable
spec:
  type: NodePort
  selector:
    app: website
  ports:
    - port: 3000
      targetPort: 3000
