k8s/website-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: flexable
  labels:
    app: website
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    alb.ingress.kubernetes.io/group.name: flexable-alb
spec:
  tls:
    - hosts:
        - flexabledats.com
      secretName: flexabledats.com-tls-secret
  rules:
    - host: flexabledats.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: website
                port:
                  number: 3000
